# wxwidgets-apps

./: README.md
notepad/: CMakeLists.txt  build.bat  configure.bat  run.bat
notepad/src/: Application.cpp  Application.h  Notepad.cpp  Notepad.h
paint/: CMakeLists.txt  configure.bat  run.bat
paint/src/: Application.cpp  Application.h  Frame.cpp  Frame.h  PaintPanel.cpp  PaintPanel.h
